--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h1>Portofolio Azura Malik</h1>
 	<h2>I'm Web Developer</h2>
 <hr>
-<a href="../../Praktikum 1/Best Movie.html">Movie Rangking Project</a> <br>
+<a href="./Public/Best Movie.html">Movie Rangking Project</a> <br>
 <img src="./Picture/Best Movie.png" alt="bestmovie" 
 width="400" height="250"> <br>
 
